# apresh

./: .tool-versions  Cargo.toml  bun.lockb  dfx.json  package.json  token_init.candid
scripts/: check_balance.sh  deploy_icrc_ledger.sh  mint_tokens.sh
src/actor-derive/: Cargo.toml
src/actor-derive/src/: lib.rs
src/app/: components.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
src/app/.storybook/: main.ts  preview.ts
src/app/src/: app.d.ts  styles.scss
src/app/src/components/: CreateShipment.svelte  Input.svelte  MapButton.svelte  Marker.svelte  Modal.svelte  Picker.svelte  QrCodeDisplay.svelte  ShipmantLocations.svelte  (+2 more)
src/app/static/: .ic-assets.json5
src/contract/: Cargo.toml  contract.did
src/contract/src/: lib.rs  qr.rs  state.rs  transfer.rs  utils.rs  vetkd.rs
src/contract/src/actors/: base.rs  carrier.rs  customer.rs  mod.rs  shipper.rs
src/contract/src/models/: carrier.rs  customer.rs  mod.rs  qrcode.rs  shipment.rs  shipment_id.rs
src/contract/src/models/shipment/: info.rs  mod.rs  shipment.rs
src/contract/src/operations/: add_message.rs  buy_shipment.rs  create_shipment.rs  finalize_shipment.rs  mod.rs  read_message.rs
src/contract/src/qr/: generator.rs  mod.rs
src/contract/src/state/: actor_collection.rs  carriers.rs  customers.rs  macros.rs  mod.rs  shipments.rs
src/contract/src/transfer/: consts.rs  mod.rs  transfer_in.rs  transfer_out.rs  utils.rs
src/contract/src/vetkd/: mod.rs  types.rs
src/rest/: package.json
src/rest/src/: index.ts
vetkd/: vetkd_system_api.wasm
(+35 files in other folders)
