[package]
name = "contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
serde = { version = "1.0.209", features = ["derive"] }
icrc-ledger-types = "0.1.6"
anyhow = "1.0.86"
image = { version = "0.24", features = ["png"], default-features = false }
qrcode-generator = "4.1"
colorgrad = "0.6"